fix text centering on mobile

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -567,13 +567,29 @@ html {
   left: 10%;
 }
 
+.left-\[20\%\] {
+  left: 20%;
+}
+
+.left-\[-20\%\] {
+  left: -20%;
+}
+
+.left-\[-10\%\] {
+  left: -10%;
+}
+
+.left-\[0\%\] {
+  left: 0%;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
 }
 
-.max-w-2xl {
-  max-width: 42rem;
+.w-full {
+  width: 100%;
 }
 
 .max-w-md {
